--- a/compose.yaml
+++ b/compose.yaml
@@ -1,8 +1,9 @@
 services:
   server:
+    restart: always
     build:
       context: .
     environment:
       NODE_ENV: production
     ports:
-      - 4000:3000
+      - 3004:3000
