--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dimforge/rapier3d": "^0.11.2",
+    "@mdx-js/loader": "^3.0.0",
+    "@mdx-js/react": "^3.0.0",
+    "@next/mdx": "^14.0.2",
+    "@types/mdx": "^2.0.10",
     "lil-gui": "^0.19.1",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
+    "remark-gfm": "^4.0.0",
     "three": "^0.158.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
